--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -16,8 +16,8 @@
                }
                updateClock();
                function updateDate() {
-              var days = ['dimanche','lundi','mardi','mercredi','jeudi.','vendredi','samedi'];
-              var months=['janvier', 'février', 'mars', 'avril', 'mai','juin', 'juillet', 'août','septembre','octobre', 'novembre','décembre'];
+              var days = ['sunday','monday','tuesday','wenesday','thursday.','friday','saturday'];
+              var months=['january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december'];
               var m = new Date();
               var dateString = (days[ m.getDay() ])  + " " +  ("0" + m.getDate()).slice(-2) + " " + (months[ m.getMonth() ])   + " " + m.getFullYear()               
                         document.getElementById('date').innerHTML = dateString;
